BootstrapCDN, Open Sans-Google Fonts, Font Awesome

--- a/index.html
+++ b/index.html
@@ -4,17 +4,29 @@
 
 <head>
 	<!-- Main Page Information -->
-	<title>HTML Page Title Goes Here</title>
-	<meta name="Author" content="shine">
-	<meta name="Description" content="Page Description goes here">
-
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<title>Firefox Student Ambassadors Meetup | February - March 2015 | Mozilla Kerala</title>
+	
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="description" content="Meetup of Firefox Student Ambassadors in Kerala organized by the Mozilla Kerala community in February - March 2015.">
+	<meta name="author" content="Mozilla Kerala">
+	<meta name="keywords" content="FSA, Meetup, Meet, Firefox Student Ambassadors, Kerala, Mozilla Kerala">
+    
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="HandheldFriendly" content="true">
 
 	<!-- Cascade Style Sheet (CSS) linking -->
 	<link rel="stylesheet" type="text/css" href="css/css-reset.css"> <!-- Reset Page Default Styles -->
 	<link rel="stylesheet" type="text/css" href="css/styles.css"> <!-- Main StyleSheet -->
+
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"> <!-- Bootstrap -->
+
+	<!-- Fonts -->
+	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open Sans:300,400,600,700"> <!-- Google Fonts - Open Sans -->
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"> <!-- Font Awesome Font Bootstrap-MaxCDN -->
+
+	
 </head>
 
 <body>
