--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 
 <head>
+	
 	<!-- Main Page Information -->
 	<title>Firefox Student Ambassadors Meetup | February - March 2015 | Mozilla Kerala</title>
 	
@@ -26,7 +27,8 @@
 	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open Sans:300,400,600,700"> <!-- Google Fonts - Open Sans -->
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"> <!-- Font Awesome Font Bootstrap-MaxCDN -->
 
-	
+	<!-- Favicon -->
+	<link rel="shortcut icon" type="image/png" href="favicon.png">
 </head>
 
 <body>
