Bootstrap script, Cover

--- a/index.html
+++ b/index.html
@@ -2,37 +2,56 @@
 
 <html lang="en">
 
-<head>
-	
-	<!-- Main Page Information -->
-	<title>Firefox Student Ambassadors Meetup | February - March 2015 | Mozilla Kerala</title>
-	
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="description" content="Meetup of Firefox Student Ambassadors in Kerala organized by the Mozilla Kerala community in February - March 2015.">
-	<meta name="author" content="Mozilla Kerala">
-	<meta name="keywords" content="FSA, Meetup, Meet, Firefox Student Ambassadors, Kerala, Mozilla Kerala">
-    
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="HandheldFriendly" content="true">
+	<head>
+		
+		<!-- Main Page Information -->
+		<title>Firefox Student Ambassadors Meetup | February - March 2015 | Mozilla Kerala</title>
+		
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta name="description" content="Meetup of Firefox Student Ambassadors in Kerala organized by the Mozilla Kerala community in February - March 2015.">
+		<meta name="author" content="Mozilla Kerala">
+		<meta name="keywords" content="FSA, Meetup, Meet, Firefox Student Ambassadors, Kerala, Mozilla Kerala">
+	    
+	    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta name="HandheldFriendly" content="true">
 
-	<!-- Cascade Style Sheet (CSS) linking -->
-	<link rel="stylesheet" type="text/css" href="css/css-reset.css"> <!-- Reset Page Default Styles -->
-	<link rel="stylesheet" type="text/css" href="css/styles.css"> <!-- Main StyleSheet -->
+		<!-- Cascade Style Sheet (CSS) linking -->
+		<link rel="stylesheet" type="text/css" href="css/css-reset.css"> <!-- Reset Page Default Styles -->
+		<link rel="stylesheet" type="text/css" href="css/styles.css"> <!-- Main StyleSheet -->
 
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"> <!-- Bootstrap -->
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"> <!-- Bootstrap -->
 
-	<!-- Fonts -->
-	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open Sans:300,400,600,700"> <!-- Google Fonts - Open Sans -->
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"> <!-- Font Awesome Font Bootstrap-MaxCDN -->
+		<!-- Fonts -->
+		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open Sans:300,400,600,700"> <!-- Google Fonts - Open Sans -->
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"> <!-- Font Awesome Font Bootstrap-MaxCDN -->
 
-	<!-- Favicon -->
-	<link rel="shortcut icon" type="image/png" href="favicon.png">
-</head>
+		<!-- Favicon -->
+		<link rel="shortcut icon" type="image/png" href="favicon.png">
+	</head>
 
-<body>
-	<!-- HTML Body goes here -->
-</body>
+	<body>
+		
+		<!-- Background -->
+		<section id="cover">
+			<div class="overlay color"></div>
+	    	<div class="container">
+	      		<div class="home-bg">
+	        		<div class="cover-content text-center">
+						<div class="cover-big">Firefox Student Ambassadors Meetup</div>
+						<div class="cover-normal">February - March 2015</div>
+						<div class="cover-small">A <strong><a href="http://mozillakerala.org/" target="_blank">Mozilla Kerala</a></strong> Initiative</div>
+						<div class="reg-btn navigation-bar btn btn-lg btn-3d"><strong>Register</strong></div>
+					</div>
+					<div class="navigation-bar"><a href="#about" class="down"></a></div>
+				</div>
+			</div>
+		</section>
+		<!-- End Background -->
+
+		<!-- Script Includes -->
+		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+	</body>
 
 </html>
