--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
 		<!-- End Background -->
 
 		<!-- Script Includes -->
+		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 	</body>
 
