--- a/index.html
+++ b/index.html
@@ -50,9 +50,38 @@
 		</section>
 		<!-- End Background -->
 
+		<!-- Overview -->
+        <section id="overview">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 text-center">
+                        <span class="glyphicon glyphicon-bullhorn" style="font-size: 400%"></span>
+                        <h2>Firefox Student Ambassadors</h2>
+                        <p>Firefox Student Ambassadors are individuals who are <strong>passionate about Mozilla</strong>, the open web, and the many benefits of Firefox and its products including <strong><a href="http://www.mozilla.org/firefox/os/" target="_blank">Firefox OS</a></strong>.</p>
+						<p>They are a global pack of do-gooders and dedicated defenders of the Web! Creative and resourceful, FSAs lead campaigns and projects in their communities to encourage others to <a href="http://www.mozilla.org/contribute" target="_blank">contribute</a> to the Mozilla mission. Not just that, Firefox Student Ambassadors are web educators and strives to keep the power of the Web in hands of users everywhere.</p>
+						<p>Student Ambassadors are given the opportunity to <strong>learn new skills, earn recognition, and advance their leadership </strong> in not just the Mozilla community, but in their school / college and local community.</p>
+						<br>
+                        <a class="btn btn-warning" role="button" href="https://wiki.mozilla.org/StudentAmbassadors/" target="_blank">Learn More</a>
+                        <a class="btn btn-warning" role="button" href="https://www.mozilla.org/contribute/studentambassadors/join/" target="_blank">Join</a>
+                    </div>
+                    <div class="col-lg-6 text-center">
+                        <span class="glyphicon glyphicon-globe" style="font-size: 400%"></span>
+                        <h2>About the Meetup</h2>
+                        <p>Firefox Student Ambassadors' Meetup is going to be a gathering of Firefox Student Ambassadors from around Kerala who are interested in contributing to <a href="https://mozilla.org/" target="_blank">Mozilla</a>, its <a href="https://mozilla.org/mission/" targeet="_blank">misson</a> and <a href="https://mozilla.org/firefox/os/" target="_blank">Firefox OS</a>.</p>
+                        <p>The event is divided in 3 phases which will cover the entire state. This is done in order to make it easier for ambassadors to participate in the event. The event will be organized in 3 zones of Kerala - Trivandrum, Cochin and Malabar.</p>
+                        <p>This event will give an insight about mozilla, its activities and how one can contribute to the amazing community. It can orientate the participants on how and where to start contributing to mozilla. The participants will get a boost to kick-start and take their next step towards contributing to the amazing world of mozilla.</p>
+	                    <br>
+                        <a class="btn btn-warning" role="button" href="#register">Register Now!</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- End Overview -->
+
 		<!-- Script Includes -->
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+		
 	</body>
 
 </html>
