--- a/index.html
+++ b/index.html
@@ -221,6 +221,23 @@
 		</section>
         <!-- End Zones -->
 
+		<!-- Agenda -->
+		<section id="agenda">
+			<div class="container">
+				<div class="row">
+					<h2>AGENDA</h2>
+					<ul class="text-left">
+						<li><h4>Bring Firefox Student Ambassadors from across the state and provide a platform to network and interact with each other.</h4></li>
+						<li><h4>Provide an overview of the activities that can be done at their clubs to keep them engaged.</h4></li>
+						<li><h4>Provide an insight of the many ways to <a href="https://mozilla.org/contribute/" target="_blank">contribute to mozilla</a> and the community.</h4></li>
+						<li><h4>Monthly meetings</h4></li>
+						<li><h4>Roadmap planning for the upcoming year on spreading the <a href="https://mozilla.org/mission/" target="_blank">mission of mozilla</a>, <a href="https://mozilla.org/firefox/os/" target="_blank">Firefox OS</a> and <a href="https://wiki.mozilla.org/StudentAmbassadors/" target="_blank">Firefox Student Ambassadors</a> at other colleges / institutions.</h4></li>
+					</ul>
+				</div>
+			</div>
+		</section>
+        <!-- End Agenda -->
+
 		<!-- Script Includes -->
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
