--- a/index.html
+++ b/index.html
@@ -236,7 +236,91 @@
 				</div>
 			</div>
 		</section>
-        <!-- End Agenda -->
+		<!-- End Agenda -->
+		
+		<!-- FAQ -->
+		<section id="faq">
+			<div class="container">
+				<div class="row">
+					<h2>FREQUENTLY ASKED QUESTIONS</h2>
+					<div id="accordion" class="panel-group text-left">
+						<div class="panel panel-default">
+							<div class="panel-heading">
+								<h4 class="panel-title">
+									<a data-toggle="collapse" data-parent="#accordion" href="#who"><span class="glyphicon glyphicon-plus"></span> Who is organizing this event?</a>
+								</h4>
+							</div>
+							<div id="who" class="panel-collapse collapse">
+								<div class="panel-body">
+									<h4>This is a Mozilla event, which means Mozilla is organizing this event through its community volunteers in Kerala (Mozilla Kerala).</h4>
+								</div>
+							</div>
+						</div>
+						<div class="panel panel-default">
+							<div class="panel-heading">
+								<h4 class="panel-title">
+									<a data-toggle="collapse" data-parent="#accordion" href="#date"><span class="glyphicon glyphicon-plus"></span> When is this happening?</a>
+								</h4>
+							</div>
+							<div id="date" class="panel-collapse collapse">
+								<div class="panel-body">
+									<h4>To Be Announced (TBA)</h4>
+								</div>
+							</div>
+						</div>
+						<div class="panel panel-default">
+							<div class="panel-heading">
+								<h4 class="panel-title">
+									<a data-toggle="collapse" data-parent="#accordion" href="#where"><span class="glyphicon glyphicon-plus"></span> Where will this event be hosted?</a>
+								</h4>
+							</div>
+							<div id="where" class="panel-collapse collapse">
+								<div class="panel-body">
+									<h4>This event will be hosted in 3 prominent regions of Kerala - Malabar, Kochi and Trivandrum. Contact the representatives mentioned above to know more details.</h4>
+								</div>
+							</div>
+						</div>
+						<div class="panel panel-default">
+							<div class="panel-heading">
+								<h4 class="panel-title">
+									<a data-toggle="collapse" data-parent="#accordion" href="#time"><span class="glyphicon glyphicon-plus"></span> What time will this event happen?</a>
+								</h4>
+							</div>
+							<div id="time" class="panel-collapse collapse">
+								<div class="panel-body">
+									<h4>The event will be organized on a weekend probably a one-day event depending upon the available resources and venue arrangements.</h4>
+								</div>
+							</div>
+						</div>
+						<div class="panel panel-default">
+							<div class="panel-heading">
+								<h4 class="panel-title">
+									<a data-toggle="collapse" data-parent="#accordion" href="#attend"><span class="glyphicon glyphicon-plus"></span> Can anyone this event?</a>
+								</h4>
+							</div>
+							<div id="attend" class="panel-collapse collapse">
+								<div class="panel-body">
+									<h4>If you are interested or love open-source, privacy and / or mozilla or all the three, you are more than welcome. However, please register yourself in the form below so that we can know an estimate number of participants that might attend. Thank you for understanding.</h4>
+								</div>
+							</div>
+						</div>
+						<div class="panel panel-default">
+							<div class="panel-heading">
+								<h4 class="panel-title">
+									<a data-toggle="collapse" data-parent="#accordion" href="#seats"><span class="glyphicon glyphicon-plus"></span> How many seats are available?</a>
+								</h4>
+							</div>
+							<div id="seats" class="panel-collapse collapse">
+								<div class="panel-body">
+									<h4>We are trying our maximum to accommodate everyone who registers, however, if we're over-booked than the capacity of our venue, we'll be forced to short-list the registrants.</h4>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- End FAQ -->
 
 		<!-- Script Includes -->
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
