--- a/index.html
+++ b/index.html
@@ -179,6 +179,22 @@
 			</div>
 		</section>
 		<!-- End FAQ -->
+
+		<!-- Registration -->
+		<section id="register">
+			<!-- <div class="overlay"></div> -->
+			<div class="container">
+				<div class="row">
+					<article class="article-big animated hiding" data-animation="fadeInDown" data-delay="0">
+						<h2>REGISTER</h2>
+						<h3>Don't you want to have all the fun? <br>
+						What are you waiting for? Register yourself now!</h3>
+						<iframe src="https://docs.google.com/forms/d/1YnA1POhYb3SKZNDc8mfBik1YleCzmBUvoaovCiaI9Ww/viewform?embedded=true" width="750" height="2250" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+					</article>
+				</div>
+			</div>
+		</section>
+		<!-- End Registration -->
 		
 		<!-- People -->
 		<section id="people">
