--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 		
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<meta name="description" content="Meetup of Firefox Student Ambassadors in Kerala organized by the Mozilla Kerala community in February - March 2015.">
-		<meta name="author" content="Mozilla Kerala">
-		<meta name="keywords" content="FSA, Meetup, Meet, Firefox Student Ambassadors, Kerala, Mozilla Kerala">
+		<meta title="description" content="Meetup of Firefox Student Ambassadors in Kerala organized by the Mozilla Kerala community in February - March 2015.">
+		<meta title="author" content="Mozilla Kerala">
+		<meta title="keywords" content="FSA, Meetup, Meet, Firefox Student Ambassadors, Kerala, Mozilla Kerala">
 	    
-	    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	    <meta title="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<meta name="HandheldFriendly" content="true">
+		<meta title="HandheldFriendly" content="true">
 
 		<!-- Cascade Style Sheet (CSS) linking -->
 		<link rel="stylesheet" type="text/css" href="css/css-reset.css"> <!-- Reset Page Default Styles -->
@@ -338,6 +338,76 @@
 			</div>
 		</section>
 		<!-- End People -->
+
+		<!-- Footer -->
+		<footer>
+			<section id="footer">
+				<div class="container">
+					<div class="row">
+						<div class="design pull-left">
+							Built <a href="#" data-toggle="modal" data-target="#video">with &hearts;, Internet Style</a> <br>
+							using <a href="http://jquery.com/" target="_blank">jQuery</a>, <a href="http://getbootstrap.com/" target="_blank">Twitter Bootstrap</a> &amp; <a href="https://fortawesome.github.io/FontAwesome/" target="_blank">FontAwesome</a> from <span class="fa fa-maxcdn"></span> MaxCDN's <a href="https://bootstrapcdn.com/" target="_blank">BootstrapCDN</a><br>
+							by the Fox Lovers in <a href="http://mozillakerala.org/" target="_blank">Kerala</a>
+						</div>
+						<div class="contact pull-right">
+							<a title="Facebook Page" class="facebook" href="https://facebook.com/MozillaKerala" target="_blank">
+								<span class="fa-stack fa-lg">
+									<span class="fa fa-circle fa-stack-2x"></span>
+									<span class="fa fa-facebook fa-stack-1x fa-inverse"></span>
+								</span>
+							</a>
+							<a title="Facebook Group" class="facebook" href="https://facebook.com/groups/MozillaKerala" target="_blank">
+								<span class="fa-stack fa-lg">
+									<span class="fa fa-circle fa-stack-2x"></span>
+									<span class="fa fa-facebook fa-stack-1x fa-inverse"></span>
+								</span>
+							</a>
+							<a title="Twitter" class="twitter" href="https://twitter.com/MozillaKerala" target="_blank">
+								<span class="fa-stack fa-lg">
+									<span class="fa fa-circle fa-stack-2x"></span>
+									<span class="fa fa-twitter fa-stack-1x fa-inverse"></span>
+								</span>
+							</a>
+							<a title="Google+ Page" class="gplus" href="https://plus.google.com/114831280089581546580" target="_blank">
+								<span class="fa-stack fa-lg">
+									<span class="fa fa-circle fa-stack-2x"></span>
+									<span class="fa fa-google-plus fa-stack-1x fa-inverse"></span>
+								</span>
+							</a>
+							<a title="Google+ Community" class="gplus" href="https://plus.google.com/communities/114787248813145966099" target="_blank">
+								<span class="fa-stack fa-lg">
+									<span class="fa fa-circle fa-stack-2x"></span>
+									<span class="fa fa-google-plus fa-stack-1x fa-inverse"></span>
+								</span>
+							</a>
+							<a title="Github Organization" class="github" href="https://github.com/MozillaKerala" target="_blank">
+								<span class="fa-stack fa-lg">
+									<span class="fa fa-circle fa-stack-2x"></span>
+									<span class="fa fa-github fa-stack-1x fa-inverse"></span>
+								</span>
+							</a>
+							<br>
+							Say Hello &#8226; hello [at] mozillakerala [dot] org <br>
+							For Event related queries, write to events [at] mozillakerala [dot] org <br>
+						</div>
+					</div>
+				</div>
+
+				<!-- Video Modal -->
+				<div class="modal fade" id="video" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+				    <div class="modal-dialog">
+				        <div class="modal-content">
+				            <div class="modal-body">
+				                <iframe width="420" height="315" src="//www.youtube.com/embed/Xe1TZaElTAs" frameborder="0" allowfullscreen></iframe>
+				            </div>
+				        </div>
+				    </div>
+				  </div>
+				</div>
+				<!-- End Video Modal -->
+			</section>
+		</footer>
+		<!-- End Footer -->
 
 		<!-- Script Includes -->
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
