--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 					<div class="row">
 						<div class="design pull-left">
 							Built <a href="#" data-toggle="modal" data-target="#video">with &hearts;, Internet Style</a> <br>
-							using <a href="http://jquery.com/" target="_blank">jQuery</a>, <a href="http://getbootstrap.com/" target="_blank">Twitter Bootstrap</a> &amp; <a href="https://fortawesome.github.io/FontAwesome/" target="_blank">FontAwesome</a> from <span class="fa fa-maxcdn"></span> MaxCDN's <a href="https://bootstrapcdn.com/" target="_blank">BootstrapCDN</a><br>
+							using <a href="http://jquery.com/" target="_blank">jQuery</a>, <a href="http://getbootstrap.com/" target="_blank">Twitter Bootstrap</a> &amp; <a href="https://fortawesome.github.io/FontAwesome/" target="_blank">FontAwesome</a> from <span class="fa fa-maxcdn"></span> MaxCDN's <a href="http://bootstrapcdn.com/" target="_blank">BootstrapCDN</a><br>
 							by the Fox Lovers in <a href="http://mozillakerala.org/" target="_blank">Kerala</a>
 						</div>
 						<div class="contact pull-right">
