--- a/index.html
+++ b/index.html
@@ -413,6 +413,8 @@
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 		
+		<script src="js/script.js"></script>
+
 	</body>
 
 </html>
