Minor Cover content changes

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 						<div class="cover-big">Firefox Student Ambassadors Meetup</div>
 						<div class="cover-normal">February - March 2015</div>
 						<div class="cover-small">A <strong><a href="http://mozillakerala.org/" target="_blank">Mozilla Kerala</a></strong> Initiative</div>
-						<div class="reg-btn navigation-bar btn btn-lg btn-3d"><strong>Register</strong></div>
+						<a class="reg-btn btn btn-3d btn-warning" role="button" href="#register"><strong>Register</strong></a>
 					</div>
-					<div class="navigation-bar"><a href="#about" class="down"></a></div>
+					<div class="navigation-bar"><a href="#overview" class="down"></a></div>
 				</div>
 			</div>
 		</section>
@@ -77,7 +77,6 @@
 			</div>
 		</section>
 		<!-- End Overview -->
-
 
 		<!-- Agenda -->
 		<section id="agenda">
