Back to Top and script adaptions

--- a/index.html
+++ b/index.html
@@ -338,6 +338,8 @@
 		</section>
 		<!-- End People -->
 
+		<div class="back-to-top"><span class="glyphicon glyphicon-chevron-up" aria-hidden="true"></span></div>
+
 		<!-- Footer -->
 		<footer>
 			<section id="footer">
