Smooth scroll effect for Register button

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						<p>The event is divided in 3 phases which will cover the entire state. This is done in order to make it easier for ambassadors to participate in the event. The event will be organized in 3 zones of Kerala - Trivandrum, Cochin and Malabar.</p>
 						<p>This event will give an insight about mozilla, its activities and how one can contribute to the amazing community. It can orientate the participants on how and where to start contributing to mozilla. The participants will get a boost to kick-start and take their next step towards contributing to the amazing world of mozilla.</p>
 						<br>
-						<a class="btn btn-warning" role="button" href="#register">Register Now!</a>
+						<a class="reg-btn btn btn-warning" role="button" href="#register">Register Now!</a>
 					</div>
 				</div>
 			</div>
