--- a/index.html
+++ b/index.html
@@ -50,6 +50,20 @@
 		</section>
 		<!-- End Background -->
 
+		<!-- Navigation -->
+		<nav id="navigation" class="navigation-bar-header light hidden-xs">
+			<div class="container">
+				<nav class="navigation navigation-bar navigation-bar-right">
+					<li><a href="#overview">Overview</a></li>
+					<li><a href="#agenda">Agenda</a></li>
+					<li><a href="#faq">FAQ</a></li>
+					<li><a href="#people">Contact</a></li>
+					<li class="featured"><a href="#register">Register</a></li>
+				</nav>
+			</div>
+		</nav>
+		<!-- End Navigation -->
+
 		<!-- Overview -->
 		<section id="overview">
 			<div class="container">
@@ -414,7 +428,11 @@
 		<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 		
-		<script src="js/script.js"></script>
+		<script type="text/javascript" src="js/script.js"></script>
+		<script type="text/javascript" src="js/jquery.appear.js"></script>
+		<script type="text/javascript" src="js/jquery.nav.js"></script>
+		<script type="text/javascript" src="js/waypoints.min.js"></script>
+		<script type="text/javascript" src="js/waypoints-sticky.min.js"></script>
 
 	</body>
 
