Update Dates FAQ and inserted date for Kochi meetup

--- a/index.html
+++ b/index.html
@@ -135,7 +135,18 @@
 							</div>
 							<div id="date" class="panel-collapse collapse">
 								<div class="panel-body">
-									<h4>To Be Announced (TBA)</h4>
+									<div class="date col-md-4 col-lg-4">
+										<h4><strong>Malabar</strong></h4>
+										<h5><em>To Be Announced (TBA)</em></h5>
+									</div>
+									<div class="date col-md-4 col-lg-4">
+										<h4><strong>Kochi</strong></h4>
+										<h5><em>Sunday, February 8, 2015</em></h5>
+									</div>
+									<div class="date col-md-4 col-lg-4">
+										<h4><strong>Thiruvananthapuram</strong></h4>
+										<h5><em>To Be Announced (TBA)</em></h5>
+									</div>
 								</div>
 							</div>
 						</div>
