Added Social Media Card Data

--- a/index.html
+++ b/index.html
@@ -17,6 +17,22 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta title="HandheldFriendly" content="true">
 
+		 <!-- Twitter Card data -->
+		<meta name="twitter:card" content="Firefox Student Ambassadors' Meetup">
+		<meta name="twitter:site" content="@MozillaKerala">
+		<meta name="twitter:title" content="Firefox Student Ambassadors' Meetup">
+		<meta name="twitter:description" content="Meetup of Firefox Student Ambassadors in Kerala organized by the Mozilla Kerala community in February - March 2015.">
+		<meta name="twitter:image" content="http://events.mozillakerala.org/fsa-meetup/bg.jpg">
+
+		<!-- Open Graph data -->
+		<meta property="og:title" content="Firefox Student Ambassadors' Meetup" />
+		<meta property="og:type" content="article" />
+		<meta property="og:url" content="http:/events.mozillakerala.org/fsa-meetup/" />
+		<meta property="og:image" content="http://events.mozillakerala.org/fsa-meetup/bg.jpg" />
+		<meta property="og:description" content="Meetup of Firefox Student Ambassadors in Kerala organized by the Mozilla Kerala community in February - March 2015." />
+		<meta property="og:site_name" content="Mozilla Kerala Events" />
+		<meta property="fb:admins" content="290667851051610" />
+
 		<!-- Cascade Style Sheet (CSS) linking -->
 		<link rel="stylesheet" type="text/css" href="css/css-reset.css"> <!-- Reset Page Default Styles -->
 		<link rel="stylesheet" type="text/css" href="css/styles.css"> <!-- Main StyleSheet -->
