Updated Malabar meetup date

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 								<div class="panel-body">
 									<div class="date col-md-4 col-lg-4">
 										<h4><strong>Malabar</strong></h4>
-										<h5><em>To Be Announced (TBA)</em></h5>
+										<h5><em>Sunday, February 15, 2015</em></h5>
 									</div>
 									<div class="date col-md-4 col-lg-4">
 										<h4><strong>Kochi</strong></h4>
