--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 						<h2>REGISTER</h2>
 						<h3>Don't you want to have all the fun? <br>
 						What are you waiting for? Register yourself now!</h3>
-						<iframe src="https://docs.google.com/forms/d/1YnA1POhYb3SKZNDc8mfBik1YleCzmBUvoaovCiaI9Ww/viewform?embedded=true" width="750" height="2250" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+						<iframe src="https://docs.google.com/forms/d/1YnA1POhYb3SKZNDc8mfBik1YleCzmBUvoaovCiaI9Ww/viewform?embedded=true" width="100%" height="2250" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 					</article>
 				</div>
 			</div>
