Updated Trivandrum meetup date

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 									</div>
 									<div class="date col-md-4 col-lg-4">
 										<h4><strong>Thiruvananthapuram</strong></h4>
-										<h5><em>To Be Announced (TBA)</em></h5>
+										<h5><em>Sunday, March 8, 2015</em></h5>
 									</div>
 								</div>
 							</div>
